--- a/week10/htmlform/input_range.html
+++ b/week10/htmlform/input_range.html
@@ -1,15 +1,35 @@
 <!DOCTYPE html>
 <html>
+
 <body>
 
-<h2>Range Field</h2>
+  <h2>Range Field</h2>
 
-<form action="/action_page.php" method="get">
-  <label for="vol">Volume (between 0 and 50):</label>
-  <input type="range" id="vol" name="vol" min="0" max="50">
-  <input type="submit" value="Submit">
-</form>
+
+  <form action="/action_page.php" method="get">
+    <label for="vol">Volume (between 0 and 50):</label>
+    <input type="range" id="vol" name="vol" min="0" max="50" onchange="onchangehandler(event)">
+    <input id="showval" name="showval" readonly width="4">
+    <input type="submit" value="Submit">
+  </form>
+
+  <form action="/action_page.php" method="get">
+    <label for="vol">Volume (between 0 and 50):</label>
+    <input type="range" id="vol" name="vol" step="5" min="0" max="50" onchange="onchangehandler_step(event)">
+    <input id="showval_step" name="showval_step" readonly width="4">
+    <input type="submit" value="Submit">
+  </form>
+
+  <script>
+    function onchangehandler(ev) {
+      document.getElementById('showval').value=ev.target.value;
+    }
+
+    function onchangehandler_step(ev) {
+      document.getElementById('showval_step').value=ev.target.value;
+    }
+  </script>
 
 </body>
-</html>
 
+</html>
