--- a/week10/htmlform/select.html
+++ b/week10/htmlform/select.html
@@ -1,12 +1,18 @@
 <!DOCTYPE html>
 <html>
-
+<head>
+    <style>
+        select{
+            width: 10rem;
+        }
+    </style>
+</head>
 <body>
 
     <h2>The select Element</h2>
     <form action="/action_page.php">
         <label for="cars">Choose a car:</label>
-        <select id="cars" name="cars">
+        <select id="cars" name="cars" >
             <option value="volvo">Volvo</option>
             <option value="saab">Saab</option>
             <option value="fiat">Fiat</option>
@@ -36,7 +42,7 @@
             <option value="saab">Saab</option>
             <option value="fiat">Fiat</option>
             <option value="audi">Audi</option>
-        </select><br><br>
+        </select>
         <input type="submit">
     </form>
 
@@ -48,7 +54,7 @@
             <option value="saab">Saab</option>
             <option value="fiat">Fiat</option>
             <option value="audi">Audi</option>
-        </select><br><br>
+        </select>
         <input type="submit">
     </form>
     
