--- a/week10/table/table_th_sticky.html
+++ b/week10/table/table_th_sticky.html
@@ -486,7 +486,9 @@
             <tr>
                 <td>Lisa</td>
                 <td>22</td>
-                <td>Artist</td>
+                <td>Artist</td>	Apple	Carrot
+                Tulip	Orange	Broccoli
+                
                 <td>Purple</td>
                 <td><a href="https://example.com">Link</a></td>
             </tr>
