--- a/week10/table/table_thead_tbody_tfoot.html
+++ b/week10/table/table_thead_tbody_tfoot.html
@@ -8,6 +8,15 @@
         td {
             border: 1px solid black;
         }
+        thead{
+            background-color: yellow;
+        }
+        tbody{
+            background-color: green;
+        }
+        tfoot{
+            background-color: red;
+        }
     </style>
 </head>
 
