--- a/week10/htmlform/input_url.html
+++ b/week10/htmlform/input_url.html
@@ -5,9 +5,9 @@
 
     <h1>Display a URL Input Field</h1>
 
-    <form action="/action_page.php">
+    <form action="/action_page.php" >
         <label for="homepage">Add your homepage:</label>
-        <input type="url" id="homepage" name="homepage">
+        <input required type="url" id="homepage" name="homepage">
         <input type="submit" value="Submit">
     </form>
 
