--- a/week10/htmlform/textarea.html
+++ b/week10/htmlform/textarea.html
@@ -12,7 +12,7 @@
 
     <h2>Textarea using css</h2>
     <form action="/action_page.php">
-        <textarea name="message" style="width:200px; height:600px;">The cat was playing in the garden.</textarea>
+        <textarea name="message" style="width:8rem; height:600px;">The cat was playing in the garden.</textarea>
         <br>
         <input type="submit">
     </form>
