--- a/week11/assign_04_template/pages/apply_now/apply_for_international.html
+++ b/week11/assign_04_template/pages/apply_now/apply_for_international.html
@@ -1,6 +1,6 @@
 <h3 class="title">Apply for International Admissions</h3>
 
-<div class="block content">
+<div class="notify">
     Select your applicant type and application year, then click on "Apply"
 </div>
 
