--- a/week11/assign_04_template/pages/apply_now/available_programs.html
+++ b/week11/assign_04_template/pages/apply_now/available_programs.html
@@ -1,20 +1,18 @@
 <h3 class="title">Apply for International Admissions</h3>
-<div class="block content">
+<div class="notify">
     Available Programs
 </div>
 <form action=""></form>
 <select name="ddlProgram1" id="ddlProgram1" tabindex="1" required="">
     <option selected="selected" value="-1">- Select a Program -</option>
-    <option value="0131">0131 Bachelor IT (CCN) Hons</option>
-    <option value="1201">1201 Early Childhood Education</option>
-    <option value="1202">1202 Recreation and Leisure Svcs.</option>
-    <option value="1203">1203 Social Service Worker</option>
-    <option value="1205">1205 Child and Youth Care</option>
-    <option value="1206">1206 Community and Justice Services</option>
-    <option value="1207">1207 Developmental Services Worker</option>
+    <option value="131">Bachelor IT (CCN) Hons</option>
+    <option value="201">Early Childhood Education</option>
+    <option value="202">Recreation and Leisure Svcs.</option>
+    <option value="203">Social Service Worker</option>
+    <option value="205">Child and Youth Care</option>
+    <option value="206">Community and Justice Services</option>
+    <option value="207">Developmental Services Worker</option>
 </select>
 
-
 <button id="citizenship_status" onclick="onclick_loadform(event)">Next</button>
-
 </form>
