--- a/week11/assign_04_template/pages/apply_now/contact_in_canada.html
+++ b/week11/assign_04_template/pages/apply_now/contact_in_canada.html
@@ -1,5 +1,5 @@
 <h3 class="title">Apply for International Admissions</h3>
-<div class="block content">
+<div class="notify">
     Contact in Canada (if applicable)
 </div>
 
