--- a/week11/assign_04_template/pages/apply_now/personal_information.html
+++ b/week11/assign_04_template/pages/apply_now/personal_information.html
@@ -1,5 +1,5 @@
 <h3 class="title">Apply for International Admissions</h3>
-<div class="block content">
+<div class="notify">
     Personal Information
 </div>
 
