--- a/week11/assign_04_template/index.html
+++ b/week11/assign_04_template/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Indian Cousine</title>
+    <title>Wisdom College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css"
