--- a/week11/assign_04_template/pages/programs/index.html
+++ b/week11/assign_04_template/pages/programs/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Day Special</title>
+    <title>Wisdom College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="../css/card.css">
