--- a/week11/assign_04_template/pages/student_life/index.html
+++ b/week11/assign_04_template/pages/student_life/index.html
@@ -1,7 +1,7 @@
 <html>
 
 <head>
-    <title>Find Location</title>
+    <title>Wisdom College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="../css/styles.css">
     <link rel="stylesheet" href="card.css">
