--- a/week10/htmlform/classwork/login/signup_form.html
+++ b/week10/htmlform/classwork/login/signup_form.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
+    <head>
+        <link rel="stylesheet" href="css/style.css">
+    </head>
 <style>
-    body {
+/*     body {
         font-family: Arial, Helvetica, sans-serif;
     }
 
@@ -9,7 +12,7 @@
         box-sizing: border-box
     }
 
-    /* Full-width input fields */
+
     input[type=text],
     input[type=password] {
         width: 100%;
@@ -31,7 +34,7 @@
         margin-bottom: 25px;
     }
 
-    /* Set a style for all buttons */
+
     button {
         background-color: #04AA6D;
         color: white;
@@ -47,51 +50,37 @@
         opacity: 1;
     }
 
-    /* Extra styles for the cancel button */
+
     .cancelbtn {
         padding: 14px 20px;
         background-color: #f44336;
     }
 
-    /* Float cancel and signup buttons and add an equal width */
+
     .cancelbtn,
     .signupbtn {
         float: left;
         width: 50%;
     }
 
-    /* Add padding to container elements */
     .container {
         padding: 16px;
+        width: 60%;
+        margin: 0 auto;
     }
 
-    /* Clear floats */
-    .clearfix::after {
-        content: "";
-        clear: both;
-        display: table;
-    }
-
-    /* Change styles for cancel button and signup button on extra small screens */
-    @media screen and (max-width: 300px) {
-
-        .cancelbtn,
-        .signupbtn {
-            width: 100%;
-        }
-    }
+ */
 </style>
 
 <body>
+    <div class="container">
+        <form action="/action_page.php" >
 
-    <form action="/action_page.php" style="border:1px solid #ccc">
-        <div class="container">
-            <h1>Sign Up</h1>
+            <h2 style="text-align: center;">New Student Sign Up</h2>
             <p>Please fill in this form to create an account.</p>
-            <hr>
-
+            
             <label for="email"><b>Email</b></label>
-            <input type="text" placeholder="Enter Email" name="email" required>
+            <input type="text" placeholder="Enter Email" name="email12" id="email12" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
@@ -99,19 +88,10 @@
             <label for="psw-repeat"><b>Repeat Password</b></label>
             <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
 
-            <label>
-                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-            </label>
-
+            <button type="submit" >Sign Up</button>
             <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
-            <div class="clearfix">
-                <button type="button" class="cancelbtn">Cancel</button>
-                <button type="submit" class="signupbtn">Sign Up</button>
-            </div>
-        </div>
-    </form>
-
+        </form>
+    </div>
 </body>
 
 </html>
