--- a/week10/htmlform/classwork/login/index.html
+++ b/week10/htmlform/classwork/login/index.html
@@ -10,12 +10,12 @@
 
     <h2 style="text-align: center;">Student Login</h2>
     <div class="container">
-        <form action="home.html" method="get">
+        <form action="http://localhost:3000/week10/htmlform/classwork/login/home.php" method="post">
             <div class="imgcontainer">
                 <img src="img/logo.png" alt="Avatar" class="avatar">
             </div>
             <label for="uname">User Email</label>
-            <input type="text" placeholder="Email Address" name="uname1" required>
+            <input type="text" placeholder="Email Address" name="uname1" id="uname1" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
