--- a/week11/assign_04_template/index.html
+++ b/week11/assign_04_template/index.html
@@ -2,8 +2,19 @@
 <html>
 
 <head>
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TDY8JP0TWM"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag() { dataLayer.push(arguments); }
+        gtag('js', new Date());
+
+        gtag('config', 'G-TDY8JP0TWM');
+    </script>
     <title>Wisdom College</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="Fi_Vmp_0OzQNk1IrqqeMZgpR7ncz433IWTNU0zlx_Tc" />
+    <meta name="msvalidate.01" content="F12000144C8014D5728785A1548D8EC1" />
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet" type="text/css" />
     <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.1/normalize.min.css" type="text/css"
         rel="stylesheet" />
