--- a/week12/assign05_template/index.html
+++ b/week12/assign05_template/index.html
@@ -12,8 +12,8 @@
             <div class="imgcontainer">
                 <img src="img/logo.png" alt="Avatar" class="avatar">
             </div>
-            <label for="uname">User Email</label>
-            <input type="text" placeholder="Email Address" name="uname1" id="uname1" required>
+            <label for="uname">User </label>
+            <input type="text" placeholder="Enter User" name="uname1" id="uname1" required>
 
             <label for="psw"><b>Password</b></label>
             <input type="password" placeholder="Enter Password" name="psw" required>
