--- a/week12/javasript/events/js_event_propagation_hierarchy.html
+++ b/week12/javasript/events/js_event_propagation_hierarchy.html
@@ -22,15 +22,15 @@
 
 <body>
 
-    <h2>JavaScript addEventListener()</h2>
+    <h2>JavaScript Capture addEventListener()</h2>
 
     <div id="myDiv1">
-        <h2>Bubbling:</h2>
+        <h2>Bubbling / Bubble:</h2>
         <p id="myP1">Click me!</p>
     </div><br>
 
     <div id="myDiv2">
-        <h2>Capturing:</h2>
+        <h2>Capturing / Capture:</h2>
         <p id="myP2">Click me!</p>
     </div>
 
