--- a/week12/javasript/script/js_external.html
+++ b/week12/javasript/script/js_external.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>External JavaScript</h1>
-    <button>Click me</button>
+    <button id="btnClick" name="btnClick">Click me</button>
 </body>
 
 </html>
