--- a/week13/assign06_seed/task08/source08.html
+++ b/week13/assign06_seed/task08/source08.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Click with mouse</title>
 </head>
 <body>
     <style>
@@ -12,10 +12,10 @@
           background: beige;
         }
         .dot {
-          height: 8px; 
-          width: 8px;
-          border-radius: 4px; /* rounds corners */
-          background: blue;
+          height: 32px; 
+          width: 32px;
+          border-radius: 16px;
+          background: rgb(255, 0, 0);
           position: absolute;
         }
       </style>
