--- a/week13/flex/flex_basis.html
+++ b/week13/flex/flex_basis.html
@@ -12,29 +12,26 @@
 
         .page {
             display: flex;
-            flex-wrap: wrap;
+            /* flex-wrap: wrap; */
         }
 
         .page>* {
             padding: 1rem;
-        }   
+        }
 
         .sidebar {
             border: 1px solid grey;
-            flex-grow: 1;
-            flex-basis: 12rem;
+            flex-basis: 25%;
+
         }
 
         .content {
-            flex-basis: 0;
-            flex-grow: 2;
-            min-width: 70%;
+            flex-basis: 75%;
         }
 
         /* Extrinsic sizes on this page simulate the small viewport for you */
         body {
-            max-width: 50rem;
-            min-height: unset;
+            max-width: 60rem;
             padding: 1rem;
             margin: 1rem auto;
         }
@@ -55,6 +52,21 @@
                     eaque. Dicta nemo asperiores a sequi unde culpa, excepturi delectus eum id nobis explicabo quaerat
                     animi deleniti!
                 </p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed recusandae inventore dolorem. Maiores
+                    omnis
+                    perferendis tempore. Excepturi dolores quae deleniti voluptates, eius dolor eligendi suscipit
+                    molestiae
+                    explicabo ut assumenda vero.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed recusandae inventore dolorem. Maiores
+                    omnis
+                    perferendis tempore. Excepturi dolores quae deleniti voluptates, eius dolor eligendi suscipit
+                    molestiae
+                    explicabo ut assumenda vero.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sed recusandae inventore dolorem. Maiores
+                    omnis
+                    perferendis tempore. Excepturi dolores quae deleniti voluptates, eius dolor eligendi suscipit
+                    molestiae
+                    explicabo ut assumenda vero.</p>
             </article>
         </main>
         <aside class="sidebar">
