--- a/week13/flex/flex_order.html
+++ b/week13/flex/flex_order.html
@@ -12,14 +12,30 @@
         * {
             box-sizing: border-box;
         }
-
-        .container-nowrap {
+        .wrapper {
+            margin: 0 auto;
+        }
+        .container-wrap {
             display: flex;
+            gap: 1rem;
             justify-content: center;
             align-items: center;
-
+            border: 1px solid var(--color-primary);
         }
-
+        .container-nowrap {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid var(--color-primary);
+        }
+        .container-reverse {
+            display: flex;
+            gap: 1rem;
+            justify-content: center;
+            align-items: center;
+            border: 1px solid var(--color-primary);
+        }
         .box {
             border: 2px solid black;
             padding: 1rem 2rem;
@@ -33,28 +49,27 @@
     <main>
         <div class="wrapper">
             <article class="flow">
-                <h3>default flex-shrink 1</h3>
-                <div class="container-nowrap">
+                <h3>default order</h3>
+                <div class="container-wrap">
                     <div class="box">One</div>
                     <div class="box">two</div>
-                    <div class="box">Three Noisy Students</div>
+                    <div class="box">Three</div>
                     <div class="box">Four</div>
                     <div class="box">Five</div>
                     <div class="box">Six</div>
                 </div>
             </article>
             <article class="flow">
-                <h3>Three Noisy Students flex-shrink 0</h3>
+                <h3>custom order assigned</h3>
                 <div class="container-nowrap">
-                    <div class="box" style="flex-shrink: 1;">One</div>
-                    <div class="box" style="flex-shrink: 1;">two</div>
-                    <div class="box" style="flex-shrink: 0;">Three Noisy Students</div>
-                    <div class="box" style="flex-shrink: 1;">Four</div>
-                    <div class="box" style="flex-shrink: 1;">Five</div>
-                    <div class="box" style="flex-shrink: 1;">Six</div>
+                    <div class="box" style="order: 2;">One</div>
+                    <div class="box" style="order: 0;">two</div>
+                    <div class="box" style="order: 1;">Three</div>
+                    <div class="box" style="order: 6;">Four</div>
+                    <div class="box" style="order: 4;">Five</div>
+                    <div class="box" style="order: 3;">Six</div>
                 </div>
             </article>
-
         </div>
     </main>
 </body>
