--- a/week13/flex/flex_wrap.html
+++ b/week13/flex/flex_wrap.html
@@ -8,6 +8,7 @@
     <style>
         :root {
             --color-primary: grey;
+            --container-height:150px;
         }
         *{
             box-sizing: border-box;
@@ -16,18 +17,40 @@
         .wrapper{
             margin: 0 auto;
             max-width: 400px;
+            
         }
         .container-wrap {
             display: flex;
             gap: 1rem;
             flex-wrap: wrap;
+            align-items: center;
+            align-content: flex-start;
             border: 1px solid var(--color-primary);
+            height: var(--container-height);
         }
         .container-nowrap {
             display: flex;
             gap: 1rem;
-            flex-wrap: nowrap;
+            align-items: center;
+            align-content: flex-start;
+            /* flex-wrap: nowrap; */
             border: 1px solid var(--color-primary);
+            height: var(--container-height);
+        }
+        .container-reverse {
+            display: flex;
+            gap: 1rem;
+            align-items: center;
+            align-content: flex-start;
+            flex-wrap: wrap-reverse;
+            border: 1px solid var(--color-primary);
+            height: var(--container-height);
+        }
+        .box{
+            border: 2px solid black;
+        }
+        h3{
+            margin:0;
         }
     </style>
 
@@ -37,7 +60,7 @@
     <main>
         <div class="wrapper">
             <article class="flow">
-                <h1>Wrapped flex </h1>
+                <h3>wrap</h3>
                 <div class="container-wrap" >
                     <div class="box">Item One</div>
                     <div class="box">Item two</div>
@@ -48,8 +71,19 @@
                 </div>
             </article>
             <article class="flow">
-                <h1>nowrap flex</h1>
+                <h3>nowrap</h3>
                 <div class="container-nowrap" >
+                    <div class="box">Item One</div>
+                    <div class="box">Item two</div>
+                    <div class="box">Item Three</div>
+                    <div class="box">Item Four</div>
+                    <div class="box" >Item Five, with longer text</div>
+                    <div class="box">Item Six</div>
+                </div>
+            </article>
+            <article class="flow">
+                <h3>wrap-reverse</h3>
+                <div class="container-reverse" >
                     <div class="box">Item One</div>
                     <div class="box">Item two</div>
                     <div class="box">Item Three</div>
