update to week 13

--- a/week13/flex/flex_align_content.html
+++ b/week13/flex/flex_align_content.html
@@ -13,7 +13,11 @@
         *{
             box-sizing: border-box;
         }
-        
+        h1,h3{
+            text-align: center;
+            text-transform: lowercase;
+            font-size: xx-large;
+        }
         .wrapper{
             margin: 0 auto;
             max-width: 500px;
@@ -96,6 +100,7 @@
 
 <body>
     <main>
+        <h1>align-content justify-content wrap main-axis /vertical /row direction</h1>
         <div class="wrapper">
             <article class="flow">
                 <h3>align content not used</h3>
