--- a/week13/flex/flex_direction_column.html
+++ b/week13/flex/flex_direction_column.html
@@ -13,8 +13,8 @@
         .container-column >* {
             border: 1px solid black;
             font-size: larger;
+            font-size: xx-large;
         }
-        
         .container-column-reverse {
             display: flex;
             flex-direction: column-reverse;
@@ -22,6 +22,7 @@
         .container-column-reverse >* {
             border: 1px solid black;
             font-size: larger;
+            font-size: xx-large;
         }
         
         h1{
@@ -33,15 +34,15 @@
 <body>
     <h1>flex column</h1>
     <div class="container-column" >
-        <div>One</div>
-        <div>Item two</div>
-        <div>The item we will refer to as three</div>
+        <div style="background-color: antiquewhite;">One</div>
+        <div style="background-color: yellow;">Item two</div>
+        <div style="background-color: darkgray;">The item we will refer to as three</div>
     </div>
     <h1>flex column reverse</h1>
     <div class="container-column-reverse">
-        <div>One</div>
-        <div>Item two</div>
-        <div>The item we will refer to as three</div>
+        <div style="background-color: antiquewhite;">One</div>
+        <div style="background-color: yellow;">Item two</div>
+        <div style="background-color: darkgray;">The item we will refer to as three</div>
     </div>
 </body>
 
