--- a/week13/flex/flex_grow_shrink.html
+++ b/week13/flex/flex_grow_shrink.html
@@ -39,7 +39,8 @@
 <body>
     <div class="wrapper">
         <div class="item ball"></div>
-        <div class="item stretch"></div>
+        <div class="item stretch">     
+        </div>
         <div class="item ball"></div>
     </div>
 </body>
