--- a/week13/flex/flex_justify_content.html
+++ b/week13/flex/flex_justify_content.html
@@ -8,11 +8,17 @@
     <style>
         body {
             padding: 0;
+            box-sizing: border-box;
+        }
+        h1,h3{
+            text-align: center;
+            text-transform: lowercase;
+            font-size: xx-large;
         }
         nav {
             padding: 12px;
-            border-top: 1px dotted hsl(0deg 0% 0% / 0.2);
-            border-bottom: 1px dotted hsl(0deg 0% 0% / 0.2);
+            border-top: 1px dotted hsla(0, 0%, 0%, 0.753);
+            border-bottom: 1px dotted hsla(0, 0%, 0%, 0.644);
         }
 
         ul {
@@ -23,7 +29,7 @@
         ul a {
             color: inherit;
             text-decoration: none;
-            font-size: 0.875rem;
+            font-size:large;
             cursor: pointer;
         }
     </style>
@@ -31,7 +37,7 @@
         .flex-start {
             display: flex;
             /* justify-content: flex-start; */ /*default*/
-            gap: 12px;
+            gap: 1rem;
         }
         .flex-end {
             display: flex;
@@ -64,30 +70,31 @@
 </head>
 
 <body>
-    <h3>flex-start</h3>
+    <h1>justify-content main-axis /horizontal /row direction</h1>
+    <h3>flex-start default</h3>
     <nav>
         <ul class="flex-start">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li>
+            <li style="background-color: #FFECB3;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
@@ -98,27 +105,27 @@
     <h3>flex-end</h3>
     <nav>
         <ul class="flex-end">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li>
+            <li style="background-color: #FFECB3;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
@@ -129,27 +136,27 @@
     </h3>
     <nav>
         <ul class="flex-center">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li>
+            <li style="background-color: #FFECB3;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
@@ -160,27 +167,27 @@
     </h3>
     <nav>
         <ul class="flex-space-between">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li>
+            <li style="background-color: #FFECB3;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
@@ -191,27 +198,27 @@
     </h3>
     <nav>
         <ul class="flex-space-around">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li>
+            <li style="background-color: #FFECB3;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
@@ -222,27 +229,27 @@
     </h3>
     <nav>
         <ul class="flex-space-evenly">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li>
+            <li style="background-color: #FFECB3;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
