--- a/week13/flex/flex_wrap.html
+++ b/week13/flex/flex_wrap.html
@@ -60,36 +60,36 @@
     <main>
         <div class="wrapper">
             <article class="flow">
-                <h3>wrap</h3>
-                <div class="container-wrap" >
-                    <div class="box">Item One</div>
-                    <div class="box">Item two</div>
-                    <div class="box">Item Three</div>
-                    <div class="box">Item Four</div>
-                    <div class="box">Item Five, with longer text</div>
-                    <div class="box">Item Six</div>
-                </div>
-            </article>
-            <article class="flow">
-                <h3>nowrap</h3>
+                <h3>nowrap default</h3>
                 <div class="container-nowrap" >
-                    <div class="box">Item One</div>
+                    <div class="box" style="background-color: yellow;">Item One</div>
                     <div class="box">Item two</div>
                     <div class="box">Item Three</div>
                     <div class="box">Item Four</div>
                     <div class="box" >Item Five, with longer text</div>
-                    <div class="box">Item Six</div>
+                    <div class="box" style="background-color: darkgray;">Item Six</div>
+                </div>
+            </article>
+            <article class="flow">
+                <h3>wrap</h3>
+                <div class="container-wrap" >
+                    <div class="box" style="background-color: yellow;">Item One</div>
+                    <div class="box">Item two</div>
+                    <div class="box">Item Three</div>
+                    <div class="box">Item Four</div>
+                    <div class="box">Item Five, with longer text</div>
+                    <div class="box" style="background-color: darkgray;">Item Six</div>
                 </div>
             </article>
             <article class="flow">
                 <h3>wrap-reverse</h3>
                 <div class="container-reverse" >
-                    <div class="box">Item One</div>
+                    <div class="box" style="background-color: yellow;">Item One</div>
                     <div class="box">Item two</div>
                     <div class="box">Item Three</div>
                     <div class="box">Item Four</div>
                     <div class="box">Item Five, with longer text</div>
-                    <div class="box">Item Six</div>
+                    <div class="box" style="background-color: darkgray;">Item Six</div>
                 </div>
             </article>
         </div>
