--- a/week13/float/left_float.html
+++ b/week13/float/left_float.html
@@ -17,7 +17,7 @@
         }
 
         .red {
-            float: left;
+            /* float: left; */
             /* float: right; */
             margin: 0;
             background-color: pink;
@@ -26,8 +26,9 @@
 
         .left {
             border: 1px solid black;
-            /*clear: left;*/
-            clear: both;
+            clear: left;
+            /* clear: right; */
+            /* clear: both; */
         }
 
         p {
