--- a/week13/flex/flex_direction_row.html
+++ b/week13/flex/flex_direction_row.html
@@ -6,22 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body{
+            box-sizing: border-box;
+        }
         .container-row {
             display: flex;
             flex-direction: row;
+            gap: 1rem;
+            border: 2px solid black;
         }
         .container-row >* {
             border: 1px solid black;
-            font-size: larger;
+            font-size: xx-large;
         }
         
         .container-row-reverse {
             display: flex;
             flex-direction: row-reverse;
+            gap: 1rem;
+            border: 2px solid black;
         }
         .container-row-reverse >* {
             border: 1px solid black;
-            font-size: larger;
+            font-size: xx-large;
         }
         
         h1{
@@ -33,15 +40,15 @@
 <body>
     <h1>flex row</h1>
     <div class="container-row">
-        <div>One</div>
-        <div>Item two</div>
-        <div>The item we will refer to as three</div>
+        <div style="background-color: antiquewhite;">One</div>
+        <div style="background-color: yellow;">Item two</div>
+        <div style="background-color: darkgray;">The item we will refer to as three</div>
     </div>
     <h1>flex row reverse</h1>
     <div class="container-row-reverse" >
-        <div>One</div>
-        <div>Item two</div>
-        <div>The item we will refer to as three</div>
+        <div style="background-color: antiquewhite;">One</div>
+        <div style="background-color: yellow;">Item two</div>
+        <div style="background-color: darkgray;">The item we will refer to as three</div>
     </div>
 </body>
 
