--- a/week13/flex/template2/homepage.html
+++ b/week13/flex/template2/homepage.html
@@ -4,83 +4,7 @@
 <head>
   <meta charset="utf-8" />
   <title>Demo home page</title>
-  <style>
-    html {
-      background-color: #333;
-    }
-
-    body>*,
-    main>* {
-      outline: 1px #ccc solid;
-    }
-
-    * {
-      margin: 10px;
-      padding: 10px;
-    }
-
-    nav {
-      background-color: #ccc;
-    }
-
-    header,
-    footer {
-      text-align: center;
-      background: #ddaa00;
-      color: white
-    }
-
-    main {
-      background-color: grey;
-    }
-
-    body,
-    nav,
-    main,
-    article {
-      display: flex;
-    }
-
-    body,
-    article {
-      flex-direction: column;
-      background-color: white;
-      margin: 5px;
-    }
-
-    article {
-      flex: 1 1 33%;
-    }
-
-    img {
-      width: 100%;
-      background-color: #ccc;
-      padding: 0;
-    }
-
-    h1 {
-      margin: 0;
-    }
-
-    p {
-      flex: 1 0 auto;
-    }
-
-    nav {
-      display: flex;
-      padding: 5px 2px;
-    }
-
-    nav a {
-      flex: 1 0;
-      margin: 0 5px;
-      background-color: white;
-      color: #ddaa00;
-      text-align: center;
-      text-decoration: none;
-      border: 1px solid #333;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css">
 </head>
 
 <body>
@@ -97,18 +21,23 @@
   <main>
     <article>
       <img alt="" src="">
-      <p>This is some awesome content that is on the page.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quia quo, nulla omnis possimus totam?
+        Adipisci cum eos harum repudiandae repellendus corrupti optio alias! Vero beatae ipsum incidunt tempore
+        provident.</p>
       <button>Go Somewhere</button>
     </article>
     <article>
       <img alt="" src="">
-      <p>This is more content than the previous box, but less than the next.</p>
+      <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati neque voluptate, qui accusantium
+        dolore et distinctio aspernatur illo atque voluptas modi voluptatem placeat ducimus molestias, vitae excepturi
+        doloremque. Excepturi!</p>
       <button>Click Me</button>
     </article>
     <article>
       <img alt="" src="">
-      <p>We have lots of content here to show that content can grow, and everything can be the same size if you use
-        flexbox. Even if this has tons of text, it will line up with the other sections.</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eos officia reprehenderit! Temporibus nihil
+        earum autem nobis debitis et praesentium error iusto repellendus corrupti, quasi tenetur impedit eius dicta
+        reprehenderit?</p>
       <button>Do Something</button>
     </article>
   </main>
