--- a/week13/float/float/3_column_classwork/index.html
+++ b/week13/float/float/3_column_classwork/index.html
@@ -18,7 +18,7 @@
     </nav>
   </header>
 
- <main class="clearfix">
+  <main class="clearfix">
     <aside class="column menu">
       <ul>
         <li>Parks</li>
@@ -27,7 +27,6 @@
         <li>Restaurants</li>
       </ul>
     </aside>
-
     <section class="column content">
       <h1>Historial Places</h1>
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Impedit fugiat nemo assumenda voluptatum veniam
@@ -38,13 +37,14 @@
     </section>
     <aside>
       <h4>Third Column</h4>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rem adipisci doloribus, harum non rerum sint reiciendis veniam expedita ipsa dolores, architecto corrupti nostrum libe</p>
+      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis rem adipisci doloribus, harum non rerum sint
+        reiciendis veniam expedita ipsa dolores, architecto corrupti nostrum libe</p>
     </aside>
   </main>
 
   <footer class="footer clearfix">
     <h4>Footer Text</h4>
-  </footer> 
+  </footer>
 
 </body>
 
