--- a/week13/flex/flex_align_self.html
+++ b/week13/flex/flex_align_self.html
@@ -29,7 +29,8 @@
             color:inherit;
             cursor: pointer;
             text-decoration: none;
-            font-size: 0.875rem;
+            font-size: large;
+            padding:.5rem;
 
         }
     </style>
@@ -80,27 +81,27 @@
     <h3>align-self: flex-start;</h3>
     <nav>
         <ul class="flex-end">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li style="align-self: flex-start;">
+            <li style="background-color: #FFECB3;align-self: flex-start;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
@@ -111,27 +112,27 @@
     </h3>
     <nav>
         <ul class="flex-center">
-            <li class="logo">
+            <li class="logo" style="background-color: #ECEFF1;">
                 <a href="">
                     Corpatech
                 </a>
             </li>
-            <li style="align-self: flex-end;">
+            <li style="background-color: #FFECB3;align-self: flex-end;">
                 <a href="">
-                    Producst
+                    Products
                 </a>
             </li>
-            <li>
+            <li style="background-color: #C8E6C9;">
                 <a href="">
                     Services
                 </a>
             </li>
-            <li>
+            <li style="background-color: #F8BBD0;">
                 <a href="">
                     Mission
                 </a>
             </li>
-            <li>
+            <li style="background-color: #B3E0FF;">
                 <a href="">
                     Contact Us
                 </a>
