--- a/week13/flex/flex_align_content.html
+++ b/week13/flex/flex_align_content.html
@@ -20,7 +20,7 @@
         }
         .wrapper{
             margin: 0 auto;
-            max-width: 500px;
+            max-width: 700px;
             
         }
         .container {
@@ -90,6 +90,7 @@
         }
         .box{
             border: 2px solid black;
+            padding:.5rem;
         }
         h3{
             margin:0;
