--- a/week13/flex/flex_align_items.html
+++ b/week13/flex/flex_align_items.html
@@ -33,7 +33,8 @@
             color:inherit;
             cursor: pointer;
             text-decoration: none;
-            font-size: 0.875rem;
+            font-size: large;
+            padding:.5rem;
 
         }
     </style>
