--- a/week13/float/left_float.html
+++ b/week13/float/left_float.html
@@ -6,6 +6,8 @@
         .wrapper {
             border: 1px solid black;
             padding: 10px;
+            /*overflow: auto;*/
+            /*to fix children overflow parent*/
         }
 
         .black {
@@ -18,7 +20,7 @@
 
         .red {
             /* float: left; */
-            /* float: right; */
+            float: right;
             margin: 0;
             background-color: pink;
             width: 20%;
@@ -26,9 +28,9 @@
 
         .left {
             border: 1px solid black;
-            clear: left;
+            /*clear: left;*/
             /* clear: right; */
-            /* clear: both; */
+            /*clear: both;*/
         }
 
         p {
@@ -45,6 +47,8 @@
         </p>
         <p class="red">Lorem ipsum dolor sit amet, consectetuer adipiscing elit.</p>
         <p class="left">This paragraph clears left.</p>
+        <!--<p style="clear:both;"></p>--><!--to fix the child element overflow beyond parent-->
+
     </div>
 </body>
 
