--- a/week14/flex/classwork_analyze_ui/homepage.html
+++ b/week14/flex/classwork_analyze_ui/homepage.html
@@ -20,28 +20,28 @@
   </nav>
   <main>
     <article>
-      <img alt="" src="">
+      <!-- <img alt="" src=""> -->
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Deserunt quia quo, nulla omnis possimus totam?
         Adipisci cum eos harum repudiandae repellendus corrupti optio alias! Vero beatae ipsum incidunt tempore
         provident.</p>
       <button>Go Somewhere</button>
     </article>
     <article>
-      <img alt="" src="">
+      <!-- <img alt="" src=""> -->
       <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Explicabo obcaecati neque voluptate, qui accusantium
         dolore et distinctio aspernatur illo atque voluptas modi voluptatem placeat ducimus molestias, vitae excepturi
         doloremque. Excepturi!</p>
       <button>Click Me</button>
     </article>
     <article>
-      <img alt="" src="">
+      <!-- <img alt="" src=""> -->
       <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores eos officia reprehenderit! Temporibus nihil
         earum autem nobis debitis et praesentium error iusto repellendus corrupti, quasi tenetur impedit eius dicta
         reprehenderit?</p>
       <button>Do Something</button>
     </article>
   </main>
-  <footer>Copyright &copy; 2016</footer>
+  <footer>Copyright &copy; 2023</footer>
 </body>
 
 </html>
