--- a/week14/flex/flex_direction_row.html
+++ b/week14/flex/flex_direction_row.html
@@ -11,7 +11,7 @@
         }
         .container-row {
             display: flex;
-            flex-direction: row;
+            /* flex-direction: row; */
             gap: 1rem;
             border: 2px solid black;
         }
