--- a/week14/flex/flex_justify_content.html
+++ b/week14/flex/flex_justify_content.html
@@ -19,12 +19,14 @@
             padding: 12px;
             border-top: 1px dotted hsla(0, 0%, 0%, 0.753);
             border-bottom: 1px dotted hsla(0, 0%, 0%, 0.644);
+            
         }
 
         ul {
             list-style-type: none;
             padding: 0px;
             margin: 0;
+            height: 5rem;
         }
         ul a {
             color: inherit;
