--- a/week14/flex/flex_grow_shrink.html
+++ b/week14/flex/flex_grow_shrink.html
@@ -25,11 +25,13 @@
         .item.stretch {
             width: 300px;
             flex-grow: 1;
+            flex-shrink: 1;
             border-radius: 16px;
         }
 
         .item.ball {
             flex-shrink: 0;
+            flex-grow: 0;
             width: 32px;
             border-radius: 50%;
         }
