--- a/week14/grid/grid_justify_content.html
+++ b/week14/grid/grid_justify_content.html
@@ -56,6 +56,12 @@
             justify-content: space-evenly;
         }
 
+        .grid_1fr {
+            display: grid;
+            grid-template: 1fr 1fr / 1fr 1fr;
+            justify-content: start;
+        }
+
         .child {
             border: 1px solid black;
             background-color: cornflowerblue;
@@ -121,6 +127,14 @@
     <h1>grid-template: 100px 100px / 100px 100px;<br>
         justify-content: space-evenly;</h1>
     <div class="container grid_evenly">
+        <div class="child">1</div>
+        <div class="child">2</div>
+        <div class="child">3</div>
+        <div class="child">4</div>
+    </div>
+    <h1>grid-template: 1fr 1fr / 1fr 1fr;<br>
+        justify-content: start;</h1>
+    <div class="container grid_1fr">
         <div class="child">1</div>
         <div class="child">2</div>
         <div class="child">3</div>
