--- a/week14/grid/grid_repeat.html
+++ b/week14/grid/grid_repeat.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <style>
+        body {
+            box-sizing: border-box;
+        }
+
         .grid_repeat_5 {
             display: grid;
             grid-template-columns: repeat(5, 1fr);
@@ -13,21 +17,19 @@
 
         .grid_repeat_auto_fill {
             display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(75px, 1fr));
+            grid-template-columns: repeat(auto-fill, minmax(76px, 1fr));
         }
 
         .grid_repeat_auto_fit {
-display: grid;
-grid-template-columns: repeat(auto-fit, minmax(75px, 1fr));
-}
-
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(76px, 1fr));
+        }
 
         .child {
             border: 1px solid black;
             font-size: x-large;
             font-weight: bold;
             text-align: center;
-
         }
 
         h1 {
