--- a/week14/grid/grid_template_areas_1.html
+++ b/week14/grid/grid_template_areas_1.html
@@ -40,7 +40,7 @@
 
         .child {
             border: 1px solid black;
-            background-color: cornflowerblue;
+            background-color: rgb(210, 220, 238);
             font-size: x-large;
             font-weight: bold;
         }
